--- a/.gitignore
+++ b/.gitignore
@@ -342,3 +342,17 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,linux,windows,visualstudiocode,python,jupyternotebooks
+
+# mmdetection
+./mmdetection/work_dirs/
+./mmdetection/data/
+./mmdetection/*.pkl
+./mmdetection/*.pkl.json
+./mmdetection/*.log.json
+./mmdetection/docs/modelzoo_statistics.md
+./mmdetection/mmdet/.mim
+./mmdetection/work_dirs/
+./mmdetection/.vscode
+*.jpg
+*.jpeg
+*.png
