--- a/.gitignore
+++ b/.gitignore
@@ -353,6 +353,7 @@ mmdetection/docs/modelzoo_statistics.md
 mmdetection/mmdet/.mim
 mmdetection/.vscode/*
 mmdetection/.vscode
+operating_configs/*
 work_dirs
 data/*
 data
