--- a/.gitignore
+++ b/.gitignore
@@ -353,7 +353,7 @@ mmdetection/docs/modelzoo_statistics.md
 mmdetection/mmdet/.mim
 mmdetection/.vscode/*
 mmdetection/.vscode
-operating_configs/*
+operating_config
 work_dirs
 data/*
 data
